<resources>
    <string name="app_name">Roomate Bill Splitter</string>
    <string name="rent">Rent</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="internet">Internet</string>
    <string name="groceries">Groceries</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string-array name="num_roommates_keys">
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
    </string-array>
    <string-array name="num_roommates_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
