<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rentLabel"
            android:text="@string/rent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rentEditText"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/electricity"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/electricityLabel"
            android:text="@string/electricity"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/electricityEditText"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/water"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/waterLabel"
            android:text="@string/water"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waterEditText"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/internet"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/internetLabel"
            android:text="@string/internet"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/internetEditText"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/groceries"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/groceriesLabel"
            android:text="@string/groceries"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groceriesEditText"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/splitButton"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="Split" />
    </LinearLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="horizontal" >-->

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/electricity"-->
<!--            android:layout_weight="1" />-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/electricityLabel"-->
<!--            android:text="@string/electricity"-->
<!--            android:layout_gravity="center_vertical" />-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/water"-->
<!--            android:layout_weight="1" />-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/waterLabel"-->
<!--            android:text="@string/water"-->
<!--            android:layout_gravity="center_vertical" />-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/internet"-->
<!--            android:layout_weight="1" />-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/internetLabel"-->
<!--            android:text="@string/internet"-->
<!--            android:layout_gravity="center_vertical"/>-->
<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="horizontal" >-->

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/groceries"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_gravity="left" />-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/groceriesLabel"-->
<!--            android:text="@string/groceries"-->
<!--            android:layout_gravity="center_vertical"/>-->
<!--    </LinearLayout>-->
</LinearLayout>